--- a/PY/PGRM/Object_oriented_programming_in_python/notebook.ipynb
+++ b/PY/PGRM/Object_oriented_programming_in_python/notebook.ipynb
@@ -153,7 +153,7 @@
     "\n",
     "A esto se llama <b>encapsulación</b> y es uno de los principios básicos de la programación orientada a objetos.\n",
     "\n",
-    "$ encapsulación \\: - \\:\\:  empaquetando \\:\\: los \\:\\: datos \\:\\: con \\:\\: el \\:\\: código \\:\\: operando \\:\\: en \\:\\: el $\n",
+    "$ encapsulacion \\: - \\:\\:  empaquetando \\:\\: los \\:\\: datos \\:\\: con \\:\\: el \\:\\: codigo \\:\\: operando \\:\\: en \\:\\: el $\n",
     "\n",
     "## Clases como planos\n",
     "\n",
