--- a/PY/PGRM/Object_oriented_programming_in_python/notebook.ipynb
+++ b/PY/PGRM/Object_oriented_programming_in_python/notebook.ipynb
@@ -1594,7 +1594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1605,7 +1605,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 42
+     "execution_count": 40
     }
    ],
    "source": [
@@ -1622,14 +1622,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "text": [
       "\u001b[1;31mType:\u001b[0m        CountString\n",
-      "\u001b[1;31mString form:\u001b[0m <__main__.CountString object at 0x16703FD0>\n",
+      "\u001b[1;31mString form:\u001b[0m <__main__.CountString object at 0x063B3FA0>\n",
       "\u001b[1;31mDocstring:\u001b[0m  \n",
       "Esta clase cuenta las palabras en un str.\n",
       "______________\n",
@@ -1685,6 +1685,157 @@
     "- La img. 3 brindará un error puesto no está definido el constructor y aún así se le está pasando parámetros de inicialización.\n",
     "\n",
     "- La img. 4 también brindará un error, dado que estamos pidiendo devolver el atributo c.count y no está definido en el constructor."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "### 7° EX: Añadiendo un constructor de clase\n",
+    "\n",
+    "In this exercise, you'll continue working on the Employee class. Instead of using the methods like set_salary() that you wrote in the previous lesson, you will introduce a constructor that assigns name and salary to the employee at the moment when the object is created.\n",
+    "\n",
+    "You'll also create a new attribute -- hire_date -- which will not be initialized through parameters, but instead will contain the current date.\n",
+    "\n",
+    "Initializing attributes in the constructor is a good idea, because this ensures that the object has all the necessary attributes the moment it is created.\n",
+    "\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Invalid salary!\nKorel Rossi\n0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Import datetime from datetime\n",
+    "from datetime import datetime\n",
+    "\n",
+    "class Employee:\n",
+    "    \n",
+    "    def __init__(self, name, salary=0):\n",
+    "        self.name = name\n",
+    "        if salary > 0:\n",
+    "          self.salary = salary\n",
+    "        else:\n",
+    "          self.salary = 0\n",
+    "          print(\"Invalid salary!\")\n",
+    "          \n",
+    "        # Add the hire_date attribute and set it to today's date\n",
+    "        self.hire_date = datetime.today()\n",
+    "        \n",
+    "   # ...Other methods omitted for brevity ...\n",
+    "      \n",
+    "emp = Employee(\"Korel Rossi\", -1000)\n",
+    "print(emp.name)\n",
+    "print(emp.salary)"
+   ]
+  },
+  {
+   "source": [
+    "### Nota\n",
+    "\n",
+    "#### ```import``` e ```import from```\n",
+    "\n",
+    "Respecto a ```import``` e ```import from```, citamos desde ~ [<b>Stack Overflow</b>](https://stackoverflow.com/questions/9439480/from-import-vs-import):\n",
+    "\n",
+    "<img src=\"12.png\"></img>\n",
+    "\n",
+    "Es decir, la diferencia recae en que al utilizar ```import X``` importamos un módulo X, y crea una referencia al módulo en el espacio de trabajo actual, por lo que podemos acceder a sus métodos y atributos.\n",
+    "\n",
+    "Por otro lado, ```from X import Y``` importa el módulo X, y crea una referencia a los objetos públicos definidos en Y, pero X en sí no está definido, por lo que no podremos acceder a sus métodos y clases.\n",
+    "\n",
+    "### ¿Y un ```módulo```? \n",
+    "\n",
+    "~ De acuerdo a [COVANTEC](https://entrenamiento-python-basico.readthedocs.io/es/latest/leccion8/modulos.html#:~:text=Un%20m%C3%B3dulo%20es%20un%20objeto,tambi%C3%A9n%20puede%20incluir%20c%C3%B3digo%20ejecutable.).\n",
+    "\n",
+    "Simplemente, un módulo es no es otra cosa sino un archivo con extensión .py. Un módulo puede definir funciones, clases y variables, también puede incluir código ejecutable.\n",
+    "\n",
+    "### ¿Y un ```submódulo```?\n",
+    "\n",
+    "Pues, es un submódulo de un módulo, y al utilizar ```from``` importamos únicamente el submódulo pero no el módulo en sí, por lo que el módulo no estaría definido, ¡pero el submódulo del modulo sí!\n",
+    "\n",
+    "### La ```única``` vez\n",
+    "\n",
+    "De acuerdo a ~ [docs.python.org](https://docs.python.org/es/3/tutorial/modules.html).\n",
+    "\n",
+    "<img src=\"13.png\"></img>\n",
+    "\n",
+    "En este sentido, la celda anterior puede ser escrita así."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Invalid salary!\nKorel Rossi\n0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Import datetime from datetime\n",
+    "import datetime\n",
+    "\n",
+    "class Employee:\n",
+    "    \n",
+    "    def __init__(self, name, salary=0):\n",
+    "        self.name = name\n",
+    "        if salary > 0:\n",
+    "          self.salary = salary\n",
+    "        else:\n",
+    "          self.salary = 0\n",
+    "          print(\"Invalid salary!\")\n",
+    "          \n",
+    "        # Add the hire_date attribute and set it to today's date\n",
+    "        self.hire_date = datetime.datetime.today() # Hacemos referencia al ejecutable .py 'datetime' (módulo) y en específico al submódulo o función datetime DENTRO del módulo datetime\n",
+    "        \n",
+    "   # ...Other methods omitted for brevity ...\n",
+    "      \n",
+    "emp_prueba = Employee(\"Korel Rossi\", -1000)\n",
+    "print(emp_prueba.name)\n",
+    "print(emp_prueba.salary)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "2021-03-14 09:08:56.475297\n2021-03-14 09:10:45.499088\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Y si probamos:\n",
+    "print(emp.hire_date)\n",
+    "print(emp_prueba.hire_date)"
+   ]
+  },
+  {
+   "source": [
+    "### Nota final (Datacamp)\n",
+    "\n",
+    "Notice how you had to add the import statement to use the today() function. You can use functions from other modules in your class definition, but you need to import the module first, and the import statement has to be outside class definition."
    ],
    "cell_type": "markdown",
    "metadata": {}
