--- a/PY/PGRM/Object_oriented_programming_in_python/notebook.ipynb
+++ b/PY/PGRM/Object_oriented_programming_in_python/notebook.ipynb
@@ -1762,7 +1762,9 @@
     "\n",
     "### ¿Y un ```submódulo```?\n",
     "\n",
-    "Pues, es un submódulo de un módulo, y al utilizar ```from``` importamos únicamente el submódulo pero no el módulo en sí, por lo que el módulo no estaría definido, ¡pero el submódulo del modulo sí!\n",
+    "Pues, es un submódulo de un módulo, y al utilizar ```from``` importamos únicamente el submódulo pero no el módulo en sí, por lo que el módulo no estaría definido, ¡pero el submódulo del modulo sí! Es decir, estaríamos importando métodos y atributos específicos, pero no la totalidad del archivo ejecutable .py.\n",
+    "\n",
+    "Una forma de pensarlo es que estamos extrayendo solo una porción del código del ejecutable .py.\n",
     "\n",
     "### La ```única``` vez\n",
     "\n",
