--- a/PY/PGRM/Object_oriented_programming_in_python/notebook.ipynb
+++ b/PY/PGRM/Object_oriented_programming_in_python/notebook.ipynb
@@ -1970,30 +1970,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Object `punto` not found.\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Probando los docstrings de la clase\n",
-    "punto?"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Definimos el objeto\n",
     "punto = Point(x=3, y=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 229,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "text": [
+      "\u001b[1;31mType:\u001b[0m        Point\n",
+      "\u001b[1;31mString form:\u001b[0m <__main__.Point object at 0x13B7FFD0>\n",
+      "\u001b[1;31mDocstring:\u001b[0m  \n",
+      "Función para calcular distancia al origen, reflección y graficar un punto específico.\n",
+      "- x = punto del eje x (predeterminado = 0.0).\n",
+      "- y = punto del eje y (predeterminado = 0.0).\n"
+     ],
+     "name": "stdout"
+    }
+   ],
+   "source": [
+    "# Probando los docstrings de la clase\n",
+    "punto?"
    ]
   },
   {
@@ -2503,6 +2508,172 @@
    ],
    "cell_type": "markdown",
    "metadata": {}
+  },
+  {
+   "source": [
+    "### Una nota para los constructores alternativos\n",
+    "\n",
+    "Notar que, al utilizar el método de clase y devolver el objeto, lo que realizamos es llamar implícitamente al constructor, ¡creando una nueva instancia de la clase!"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Perro:\n",
+    "    GUAU = 'guau'\n",
+    "    def __init__(self, nombre, guau='guau'):\n",
+    "\n",
+    "        if guau == Perro.GUAU:\n",
+    "            self.nombre = nombre\n",
+    "            self.guau = guau\n",
+    "        else:\n",
+    "            self.guau = Perro.GUAU\n",
+    "            print('¡No es un perro! Asignando {}.'.format(Perro.GUAU))\n",
+    "\n",
+    "    @classmethod\n",
+    "    def from_method(cls, nombre):\n",
+    "        return cls(nombre)\n",
+    "            \n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "¡No es un perro! Asignando guau.\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "<__main__.Perro at 0x170e2f58>"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 140
+    }
+   ],
+   "source": [
+    "a = Perro('Tom', 'Miau')\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "<__main__.Perro at 0x14c2ca00>"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 139
+    }
+   ],
+   "source": [
+    "b = Perro.from_method('Aquiles')\n",
+    "b"
+   ]
+  },
+  {
+   "source": [
+    "## Ejercicios\n",
+    "\n",
+    "¡Ahora a practicar con los ejercicios!\n",
+    "\n",
+    "### 9° EX: Atributos de nivel de clase\n",
+    "\n",
+    "Class attributes store data that is shared among all the class instances. They are assigned values in the class body, and are referred to using the ClassName. syntax rather than self. syntax when used in methods.\n",
+    "\n",
+    "In this exercise, you will be a game developer working on a game that will have several players moving on a grid and interacting with each other. As the first step, you want to define a Player class that will just move along a straight line. Player will have a position attribute and a move() method. The grid is limited, so the position of Player will have a maximal value."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 218,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Player:\n",
+    "\n",
+    "    MAX_POSITION = 10\n",
+    "\n",
+    "    def __init__(self, position=0):\n",
+    "        self.position = 0\n",
+    "\n",
+    "    def move(self, steps):\n",
+    "        if (self.position + steps) <= 10:\n",
+    "            self.position = self.position + steps\n",
+    "        else:\n",
+    "            self.position = Player.MAX_POSITION\n",
+    "    \n",
+    "    def draw(self):\n",
+    "        drawing = '-'*Player.MAX_POSITION\n",
+    "        drawing = list(drawing)\n",
+    "        if self.position - 1 < 0:\n",
+    "            i = 0\n",
+    "        if self.position - 1 > 0:\n",
+    "            i = self.position - 1\n",
+    "        drawing[i] = '|'\n",
+    "        drawing = ''.join(drawing)\n",
+    "        print(drawing)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 228,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "---|------\n|---------\n---------|\n"
+     ]
+    }
+   ],
+   "source": [
+    "Player1 = Player(); Player1.move(4); Player1.draw()\n",
+    "Player2 = Player(); Player2.draw()\n",
+    "Player3 = Player(); Player3.move(100) ; Player3.draw()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'6789'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 166
+    }
+   ],
+   "source": []
   }
  ]
 }
