--- a/PY/ML/4_redes_neuronales/notebook.ipynb
+++ b/PY/ML/4_redes_neuronales/notebook.ipynb
@@ -1642,7 +1642,8 @@
   },
   {
    "source": [
-    "```topology = [p, 4, 8, 16, 8, 4, 1, 1]\n",
+    "```\n",
+    "topology = [p, 4, 8, 16, 8, 4, 1, 1]\n",
     "\n",
     "create_nn(topology, sigm)\n",
     "\n",
@@ -1662,6 +1663,7 @@
     "# Función que se encargará de entrenar a nuestra red neuronal\n",
     "def train():\n",
     "    pass\n",
+    "    \n",
     "```"
    ],
    "cell_type": "markdown",
